# pike-project

./: .gitignore  README.md  project.pike
src/: build.pike  program.pike
src/cmod/: Makefile.in  Module.cmod  configure.in
src/cmod/module.pmod.in/: module.pmod
src/cmod/test/: main
src/licenses/: gpl2.lic  gpl3.lic  lgpl21.lic  lgpl3.lic  mpl20.lic
src/pmod/: Makefile.in  configure.in
src/pmod/module.pmod.in/: module.pmod
src/pmod/test/: main
