AC_INIT([${module}], [0.1], [${author}])
AC_MODULE_INIT()
AC_CONFIG_HEADERS(config.h)
#AC_ARG_WITH(${lc_module_name},     [  --without-${lc_module_name}       Support for ${module}],[],[with_${lc_module_name}=yes])

CMOD_LIBS=""
CMOD_CFLAGS=""

AC_SUBST(CMOD_CFLAGS)
AC_SUBST(CMOD_LIBS)
AC_OUTPUT(Makefile)
